Restore add-list coverage and harden taskkill execution