@@ -436,17 +436,27 @@ public class WindowsUtils {
         }
 
         try {
-            Process killByImageName = Runtime.getRuntime().exec(
-                    "taskkill /im \"" + normalizedProcessName + "\" /f"
-            );
+            Process killByImageName = new ProcessBuilder(
+                    "taskkill",
+                    "/im",
+                    normalizedProcessName,
+                    "/f",
+                    "/t"
+            ).start();
             killByImageName.waitFor(3, TimeUnit.SECONDS);
 
             if (killByImageName.exitValue() == 0) {
                 return true;
             }
 
-            Process process = Runtime.getRuntime().exec(
-                    "tasklist /fi \"imagename eq " + normalizedProcessName + "\" /fo csv /nh");
+            Process process = new ProcessBuilder(
+                    "tasklist",
+                    "/fi",
+                    "imagename eq " + normalizedProcessName,
+                    "/fo",
+                    "csv",
+                    "/nh"
+            ).start();
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String line;
@@ -467,7 +477,13 @@ public class WindowsUtils {
 
             boolean success = true;
             for (int pid : pids) {
-                Process kill = Runtime.getRuntime().exec("taskkill /pid " + pid + " /f");
+                Process kill = new ProcessBuilder(
+                        "taskkill",
+                        "/pid",
+                        String.valueOf(pid),
+                        "/f",
+                        "/t"
+                ).start();
                 kill.waitFor();
                 if (kill.exitValue() != 0) {
                     success = false;
